--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Alura Plus</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="refazer.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <main class="conteudo">
