--- a/index.html
+++ b/index.html
@@ -53,6 +53,43 @@
                 <img class="telas" src="./img/telas.png" alt="">
             </div>
         </section>
+        <section class="grupo4">
+            <img src="./img/notebook.png" alt="Notebook com o site da Alura na tela.">
+            <div class="grupo4__sessao">
+                <h1 class="grupo4__sessao__titulo">Baixe seus cursos</h1>
+                <p class="grupo4__sessao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
+            </div>
+        </section>
+        <section class="grupo5">
+            <h1 class="grupo5__titulo">Disponível nos seus dispositivos favoritos</h1>
+            <div class="grupo5__plataformas">
+                <div class="grupo5__plataformas__imagem">
+                    <img src="./img/tv.png" alt="">
+                    <p class="grupo5__plataformas__texto">TV</p>
+                </div>
+                <div class="grupo5__plataformas__imagem">
+                    <img src="./img/computador.png" alt="">
+                    <p class="grupo5__plataformas__texto">Computadores</p>
+                </div>
+                <div class="grupo5__plataformas__imagem">
+                    <img src="./img/celular.png" alt="">
+                    <p class="grupo5__plataformas__texto">Celulares e Tablets</p>
+                </div>
+            </div>
+        </section>
     </main>
+    <footer class="rodape">
+            <p class="rodape__alura">alura+</p>
+            Idiomas
+            Dispositivos compatíveis
+            Contrato de assinatura
+            Política de privacidade
+            Proteção de dados no Brasil
+            Anúncios personalizados
+            Ajuda
+            ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
+
+            Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
+    </footer>
 </body>
 </html>
