--- a/index.html
+++ b/index.html
@@ -77,19 +77,24 @@
                 </div>
             </div>
         </section>
+        <section class="rodape-teste">
+            <footer class="rodape">
+                <p class="rodape__alura">alura+</p>
+               <div class="rodape__grupo">
+                    <a class="rodape__grupo__texto" href="">Idiomas</a>
+                    <a class="rodape__grupo__texto" href="">Dispositivos compatíveis</a>
+                    <a class="rodape__grupo__texto" href="">Contrato de assinatura</a>
+                    <a class="rodape__grupo__texto" href="">política de privacidade</a>
+                    <a class="rodape__grupo__texto" href="">proteção de dados no Brasil</a>
+                    <a class="rodape__grupo__texto" href="">Anúncios personalizados</a>
+                    <a class="rodape__grupo__texto" href="">Ajuda</a>
+                </div>
+                <div class="rodape__copyright">
+                    <p>® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+                    <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+                </div>
+            </footer>
+        </section>
     </main>
-    <footer class="rodape">
-            <p class="rodape__alura">alura+</p>
-            Idiomas
-            Dispositivos compatíveis
-            Contrato de assinatura
-            Política de privacidade
-            Proteção de dados no Brasil
-            Anúncios personalizados
-            Ajuda
-            ® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.
-
-            Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33
-    </footer>
 </body>
 </html>
