--- a/index.html
+++ b/index.html
@@ -1,100 +1,88 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alura Plus</title>
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
+    <title>Alura+</title>
 </head>
 <body>
-    <main class="conteudo">
-        <section class="grupo1">
-            <div class="plano__apresentacao">
-                <div class="plano__apresentacao__sessao1">
-                    <h1 class="plano__apresentacao__sessao1__texto1">Com o Combo+, você pode aproveitar a</h1>
-                </div>
-                <div class="plano__apresentacao__sessao2">
-                    <h1 class="plano__apresentacao__sessao2__texto2">Alura+ e o Alura Língua por um preço</h1>
-                </div>
-                <div class="plano__apresentacao__sessao3">
-                    <h1 class="plano__apresentacao__sessao3__texto3">único.</h1>
-                </div>
-            </div>
-            <div class="plano__combo">
-                <p class="plano__combo__frase1">alura+ alura<strong>língua</strong></p>
-                <p class="plano__combo__frase2">COMBO+</p>
-                <div class="teste"></div>
-            </div>
-            <div class="plano__assinatura">
-                <a class="plano__assinatura__button1" href="">Assine por 12x de R$120,00*</a>
-                <a class="plano__assinatura__button2" href="">Assinar somente o Alura+</a>
-                <p class="plano__assinatura__obs">O preço pode variar caso a assinatura seja feita em outros planos.</p>
-            </div>
-        </section>
-        <section class="grupo2">
-            <div class="grupo2__sessao">
-                <img src="./img/plataformas.png" alt="">
-                <div class="grupo2__sessao__informacao">
-                    <h1 class="grupo2__sessao__informacao__titulo">Assista do seu jeito</h1>
-                    <p class="grupo2__sessao__informacao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
-                </div>
-            </div>
-        </section>
-        <section class="grupo3">
-            <div class="grupo3__informacao">
-                <p class="grupo3__informacao__texto">Só o Combo+ oferece Alura+ e Alura Língua juntos para você ter acesso a cursos de diversas áreas da tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
-                <div class="grupo3__informacao__button">
-                    <a href="">Assine o Combo+</a>
-                </div>
-            </div>
-            <div class="grupo3__imagem">
-                <img class="telas" src="./img/telas.png" alt="">
-            </div>
-        </section>
-        <section class="grupo4">
-            <img src="./img/notebook.png" alt="Notebook com o site da Alura na tela.">
-            <div class="grupo4__sessao">
-                <h1 class="grupo4__sessao__titulo">Baixe seus cursos</h1>
-                <p class="grupo4__sessao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos estão sempre com você, até mesmo sem internet.</p>
-            </div>
-        </section>
-        <section class="grupo5">
-            <h1 class="grupo5__titulo">Disponível nos seus dispositivos favoritos</h1>
-            <div class="grupo5__plataformas">
-                <div class="grupo5__plataformas__imagem">
-                    <img src="./img/tv.png" alt="">
-                    <p class="grupo5__plataformas__texto">TV</p>
-                </div>
-                <div class="grupo5__plataformas__imagem">
-                    <img src="./img/computador.png" alt="">
-                    <p class="grupo5__plataformas__texto">Computadores</p>
-                </div>
-                <div class="grupo5__plataformas__imagem">
-                    <img src="./img/celular.png" alt="">
-                    <p class="grupo5__plataformas__texto">Celulares e Tablets</p>
-                </div>
-            </div>
-        </section>
-        <section class="rodape-teste">
-            <footer class="rodape">
-                <p class="rodape__alura">alura+</p>
-               <div class="rodape__grupo">
-                    <a class="rodape__grupo__texto" href="">Idiomas</a>
-                    <a class="rodape__grupo__texto" href="">Dispositivos compatíveis</a>
-                    <a class="rodape__grupo__texto" href="">Contrato de assinatura</a>
-                    <a class="rodape__grupo__texto" href="">política de privacidade</a>
-                    <a class="rodape__grupo__texto" href="">proteção de dados no Brasil</a>
-                    <a class="rodape__grupo__texto" href="">Anúncios personalizados</a>
-                    <a class="rodape__grupo__texto" href="">Ajuda</a>
-                </div>
-                <div class="rodape__copyright">
-                    <p>® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
-                    <p>Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
-                </div>
-            </footer>
-        </section>
-    </main>
+    <section class="container principal">
+        <div class="container__caixa">
+            <h1 class="container__titulo">Com o Combo+, você pode aproveitar a Alura+ e o Alura Língua por um preço.</h1>
+            <img class="container__imagem" src="img/Combo.png" alt="O combo+ é a junção do alura+ com o alura língua">
+            <a class="container__botao" href="www.alura.com.br">Assine por 12x de R$120,00*</a>
+            <a class="container__botao botao__secundario" href="www.alura.com.br">Assinar somente o Alura+</a>
+            <p class="container__aviso">*O preço pode variar caso a assinatura seja feita em outros planos.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <img class="secundario__imagem" src="img/plataformas.png" alt="Um monitor e um celular com o Alura+ aberto">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Assista do seu jeito</h2>
+            <p class="descricao__texto">Aproveite a tela grande da TV ou assista no tablet, laptop, celular e outros aparelhos. Nossa seleção de cursos não para de crescer.</p>
+        </div>
+    </section>
+    <section class="container secundario">
+        <div class="container__descricao">
+                <p class="descricao__texto"> Só o Combo+ oferece Alura+ Língua para você ter acesso a cursos de diversas áreas de tecnologia e aprender inglês ou espanhol, onde e como quiser.</p>
+                <a class="container__botao secundario__botao" href="www.alura.com.br">Assinar o Combo+</a>
+        </div>
+        <img class="secundario__imagem" src="img/telas.png" alt="Tela da alura+ e do alura língua">
+    </section>
+    <section class="container secundario">
+        <img class="secundario__imagem" src="img/notebook.png" alt="notebook com o alura aberto na tela">
+        <div class="container__descricao">
+            <h2 class="descricao__titulo">Baixe seus cursos</h2>
+            <p class="descricao__texto">Baixe e assista quando e onde quiser. Assim, seus favoritos, estão sempre com você, até mesmo sem internet.</p>
+        </div>
+    </section>
+    <section class="dispositivos">
+        <h2 class="dispositivos__titulo">Disponível nos seus dispositivos favoritos</h2>
+        <ul class="dispositivos__lista">
+            <li>
+                <img src="img/tv.png" alt="ícone de televisão">
+                <h3 class="lista__item">TV</h3>
+            </li>
+            <li>
+                <img src="img/tv.png" alt="ícone de computador">
+                <h3 class="lista__item">Computadores</h3>
+            </li>
+            <li>
+                <img src="img/tv.png" alt="ícone de celular">
+                <h3 class="lista__item">Celulares e Tablets</h3>
+            </li>
+        </ul>
+    </section>
+    <footer class="rodape">
+        <img class="rodape__logo" src="img/Logo.png" alt="Alura+">
+        <ul class="rodape__lista">
+            <li class="lista__link">
+                <a href="#">Idioma</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Dispositivos compatíveis</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Contrato de ssinatura</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Política de privacidade</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Proteção de dados no Brasil</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Anúncios personalizados</a>
+            </li>
+            <li class="lista__link">
+                <a href="#">Ajuda</a>
+            </li>
+        </ul>
+        <p class="rodape__texto">® 2021 Alura, Alura+ e Alura Língua. Todos os direitos reservados. Serviço de assinatura paga. Conteúdo sujeito a disponibilidade.</p>
+        <p class="rodape__texto">Alura+ é um serviço pago, baseado em assinatura e sujeito a termos e condições. O serviço Alura+ é comercializado por Aovs Sistemas de Informática S.A., Rua Vergueiro, 3185 - Liberdade, São Paulo - SP, 04101-300, Brasil e CNPJ 05.555.382/0001-33</p>
+    </footer>
 </body>
 </html>
